Test with URI instead of URL